--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,14 @@
          data-width="300">
     </div>
 
+    <!-- Fallback Button -->
+    <div id="fallbackButton" style="display:none;">
+      <button class="fallback-btn" onclick="window.location.href='https://accounts.google.com/o/oauth2/auth?response_type=code&client_id=1054339746495-1oiv1uf35qqcbjk63r1epda3s5ap7st8.apps.googleusercontent.com&redirect_uri=https://egunkarii.vercel.app/auth/callback&scope=email profile&prompt=select_account'">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg" alt="Google">
+        Sign in with Google (Fallback)
+      </button>
+    </div>
+
     <div id="errorMessage" class="error-message"></div>
   </div>
 
