--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,12 @@
     <h1>Login ke Aplikasi</h1>
     <p>Silakan login dengan akun Google Anda</p>
     
-    <!-- Div untuk tombol Google -->
+    <!-- Google Sign-In Button -->
     <div id="g_id_onload"
          data-client_id="1054339746495-1oiv1uf35qqcbjk63r1epda3s5ap7st8.apps.googleusercontent.com"
          data-context="signin"
-         data-ux_mode="popup"
-         data-callback="handleCredentialResponse"
+         data-ux_mode="redirect"
+         data-login_uri="https://egunkarii.vercel.app/auth/callback"
          data-auto_prompt="false">
     </div>
 
@@ -31,20 +31,23 @@
     </div>
 
     <!-- Fallback Button -->
-    <div id="fallbackButton" style="display:none;">
-      <button class="fallback-btn" onclick="window.location.href='https://accounts.google.com/o/oauth2/auth?response_type=code&client_id=1054339746495-1oiv1uf35qqcbjk63r1epda3s5ap7st8.apps.googleusercontent.com&redirect_uri=https://egunkarii.vercel.app/auth/callback&scope=email profile&prompt=select_account'">
+    <div id="fallbackButton" style="display:none; margin-top:20px;">
+      <button class="fallback-btn">
         <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg" alt="Google">
-        Sign in with Google (Fallback)
+        Sign in with Google
       </button>
     </div>
 
     <div id="errorMessage" class="error-message"></div>
+    <div id="loadingIndicator" class="loading-indicator" style="display:none;">
+      Memproses login...
+    </div>
   </div>
 
-  <!-- Load Google Identity Services -->
+  <!-- Google Identity Services -->
   <script src="https://accounts.google.com/gsi/client" async defer></script>
   
-  <!-- Script custom kita -->
+  <!-- Custom Auth Script -->
   <script src="/auth.js"></script>
 </body>
 </html>
