--- a/public/index.html
+++ b/public/index.html
@@ -1,53 +1,16 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login dengan Google</title>
-  <link rel="stylesheet" href="/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Login with Google</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="login-container">
-    <h1>Login ke Aplikasi</h1>
-    <p>Silakan login dengan akun Google Anda</p>
-    
-    <!-- Google Sign-In Button -->
-    <div id="g_id_onload"
-         data-client_id="1054339746495-1oiv1uf35qqcbjk63r1epda3s5ap7st8.apps.googleusercontent.com"
-         data-context="signin"
-         data-ux_mode="redirect"
-         data-login_uri="https://egunkarii.vercel.app/auth/callback"
-         data-auto_prompt="false">
-    </div>
-
-    <div class="g_id_signin"
-         data-type="standard"
-         data-shape="rectangular"
-         data-theme="filled_blue"
-         data-text="signin_with"
-         data-size="large"
-         data-logo_alignment="left"
-         data-width="300">
-    </div>
-
-    <!-- Fallback Button -->
-    <div id="fallbackButton" style="display:none; margin-top:20px;">
-      <button class="fallback-btn">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg" alt="Google">
-        Sign in with Google
-      </button>
-    </div>
-
-    <div id="errorMessage" class="error-message"></div>
-    <div id="loadingIndicator" class="loading-indicator" style="display:none;">
-      Memproses login...
-    </div>
+  <div class="container">
+    <h1>Login dengan Google</h1>
+    <button onclick="loginWithGoogle()">Login Google</button>
   </div>
-
-  <!-- Google Identity Services -->
-  <script src="https://accounts.google.com/gsi/client" async defer></script>
-  
-  <!-- Custom Auth Script -->
-  <script src="/auth.js"></script>
+  <script src="auth.js"></script>
 </body>
 </html>
