--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Login dengan Google</h1>
+    <h1>Loginn dengan Google</h1>
     <button onclick="loginWithGoogle()">Login Google</button>
   </div>
   <script src="auth.js"></script>
