--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
   <div class="container">
-    <h1>Loginn dengan Google</h1>
-    <button onclick="loginWithGoogle()">Login Google</button>
+    <h1>Login with Google</h1>
+    <button onclick="loginWithGoogle()">Login with Google</button>
+    <p class="notice">By logging in, you agree to our <a href="/privacy.html">Privacy Policy</a> and <a href="/terms.html">Terms of Service</a>.</p>
   </div>
   <script src="auth.js"></script>
 </body>
