--- a/public/index.html
+++ b/public/index.html
@@ -1,73 +1,20 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Login dengan Google</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      background: linear-gradient(135deg, #7f00ff, #e100ff);
-      color: white;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      margin: 0;
-      text-align: center;
-    }
-    button {
-      padding: 10px 20px;
-      font-size: 1.1rem;
-      border: none;
-      background: white;
-      color: #7f00ff;
-      border-radius: 5px;
-      cursor: pointer;
-      margin-top: 20px;
-    }
-    #profile {
-      margin-top: 30px;
-      background: rgba(255,255,255,0.1);
-      padding: 20px;
-      border-radius: 10px;
-    }
-    img {
-      border-radius: 50%;
-      width: 100px;
-      margin-bottom: 10px;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Google Login</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Login dengan Google</h1>
-  <div id="content">
-    <button onclick="window.location='/api/auth'">Login Google</button>
+  <div class="container">
+    <h1>Login with Google</h1>
+    <button onclick="loginWithGoogle()">Login with Google</button>
+    <div class="legal-links">
+      <a href="/privacy">Privacy Policy</a> | 
+      <a href="/terms">Terms of Service</a>
+    </div>
   </div>
-
-  <script>
-    async function checkLogin() {
-      const res = await fetch('/api/user');
-      if (res.ok) {
-        const user = await res.json();
-        document.getElementById('content').innerHTML = `
-          <div id="profile">
-            <img src="${user.picture}" alt="Foto Profil">
-            <h2>${user.name}</h2>
-            <p>${user.email}</p>
-            <button onclick="logout()">Logout</button>
-          </div>
-        `;
-      }
-    }
-
-    function logout() {
-      document.cookie = "token=; path=/; expires=Thu, 01 Jan 1970 00:00:00 UTC;";
-      location.reload();
-    }
-
-    checkLogin();
-  </script>
+  <script src="auth.js"></script>
 </body>
 </html>
