--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container">
     <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg" alt="Google Logo" class="google-logo">
-    <h1>Sign in with Google kntl</h1>
+    <h1>Sign in with Google</h1>
     <button onclick="loginWithGoogle()" class="google-btn">
       <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg" alt="Google Logo">
       Continue with Google
