--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Google OAuth Login</title>
-  <link rel="stylesheet" href="/style.css">
-  <meta name="google-signin-client_id" content="1054339746495-1oiv1uf35qqcbjk63r1epda3s5ap7st8.apps.googleusercontent.com">
+  <link rel="stylesheet" href="/style.css" />
+  <meta name="google-signin-client_id" content="1054339746495-1oiv1uf35qqcbjk63r1epda3s5ap7st8.apps.googleusercontent.com" />
 </head>
 <body>
   <div class="container">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg" alt="Google Logo" class="google-logo">
-    <h1>Sign in with Googil</h1>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg" alt="Google Logo" class="google-logo" />
+    <h1>Sign in with Google</h1>
     <button onclick="loginWithGoogle()" class="google-btn">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg" alt="Google Logo">
-      Continue with Googil
+      <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg" alt="Google Logo" />
+      Continue with Google
     </button>
     
     <div class="legal-links">
-      <p>By continuing, you agree to our <a href="/privacy">Privacy Policy</a> and <a href="/terms">Terms of Service</a>.</p>
+      <p>
+        By continuing, you agree to our 
+        <a href="/privacy">Privacy Policy</a> and 
+        <a href="/terms">Terms of Service</a>.
+      </p>
     </div>
   </div>
 
