--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <h1>Sign in with Google</h1>
     <button onclick="loginWithGoogle()" class="google-btn">
       <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg" alt="Google Logo" />
-      Continue with Google
+      Continue with Googlee
     </button>
     
     <div class="legal-links">
