--- a/public/404.html
+++ b/public/404.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Page Not Found</title>
+  <title>404 Not Found</title>
   <link rel="stylesheet" href="/style.css">
 </head>
 <body>
   <div class="container">
     <h1>404 - Page Not Found</h1>
     <p>The page you are looking for doesn't exist or has been moved.</p>
-    <a href="/" class="button">Go to Homepage</a>
+    <a href="/" class="google-btn">Go to Home</a>
   </div>
 </body>
 </html>
