--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     
     <div class="legal-links">
       <p>
-        By continuing, you agree to our 
+        By continuingg, you agree to our 
         <a href="/privacy">Privacy Policy</a> and 
         <a href="/terms">Terms of Service</a>.
       </p>
