--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dashboard</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
   <div class="container">
@@ -26,9 +26,12 @@
 
         console.log('Response status:', response.status);
 
-        if (response.redirected) {
-          console.log('Redirect detected, going to home');
-          return window.location.href = '/';
+        if (!response.ok) {
+          if (response.status === 401) {
+            console.log('Unauthorized, redirecting to home');
+            return window.location.href = '/';
+          }
+          throw new Error('Network response was not ok');
         }
 
         const data = await response.json();
@@ -51,8 +54,8 @@
     }
 
     function logout() {
-      document.cookie = 'token=; Path=/; Expires=Thu, 01 Jan 1970 00:00:00 GMT';
-      window.location.href = '/';  // Pastikan redirect ke root tanpa .html
+      document.cookie = 'token=; Path=/; Expires=Thu, 01 Jan 1970 00:00:01 GMT;';
+      window.location.href = '/';
     }
 
     document.addEventListener('DOMContentLoaded', fetchUser);
