--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Google OAuth Login</title>
-  <link rel="stylesheet" href="/static/style.css">
+  <link rel="stylesheet" href="/public/style.css">
   <meta name="google-signin-client_id" content="1054339746495-1oiv1uf35qqcbjk63r1epda3s5ap7st8.apps.googleusercontent.com">
 </head>
 <body>
