--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dashboard</title>
+  <title>Dashboard - Egunkari</title>
   <link rel="stylesheet" href="/public/style.css">
 </head>
 <body>
@@ -42,6 +42,7 @@
             <img src="${data.user.picture}" alt="Profile" class="profile-pic">
             <h2>${data.user.name}</h2>
             <p>${data.user.email}</p>
+            <p class="provider-badge">Logged in via ${data.user.provider === 'google' ? 'Google' : 'Email'}</p>
           `;
         } else {
           console.log('No user data, redirecting to home');
